# mleng

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  dataProcess.ipynb  docker-compose.yml  docker-run.bat  docker-run.sh  environment.yml  evaluate.bat  evaluate.sh  implementation_plan.md  pyproject.toml  requirements.txt  run.py  run_app.py  test_qdrant.py  test_run.py  test_run_simple.py
.cursor/rules/: custom-ai-rule.mdc
cache/chroma_db/: chroma.sqlite3
config/: config.py
data/qdrant_data/: meta.json
output/: parliamentary_minutes.csv  speakers_list.csv
output/output-new/: community_data.json  evaluation_results.json  evaluation_summary.txt  graph_data_d3.json
processed_data/ner_cache/: entities_2216312170.json  entities_3376870515.json
project-info/: README.md
src/: __init__.py  main.py  test_ollama.py  test_qdrant.py  test_vector_store.py
src/analytics/: __init__.py  relationship_mapper.py  sentiment_analyzer.py  session_analysis.py  speaker_analysis.py
src/api/: analytics_routes.py  api_router.py  app.py
src/data/: data_loader.py  ingestion.py  loader.py
src/database/: vector_store.py
src/demo/: graphrag_demo.py
src/evaluation/: __init__.py  evaluation.py  run_evaluation.py
src/graph/: knowledge_graph.py  query_engine.py
src/models/: embeddings.py  graph.py  graphrag.py  llm_interface.py  ner.py
src/rag/: graphrag.py  hybrid_retriever.py  llm.py  pipeline.py  retriever.py
src/services/: ollama.py
src/storage/: vector_db.py
src/ui/: app.py  app_fix.py  streamlit_app.py
src/web/: app.py
tests/: test_gliner.py
(+13 files in other folders)
