[tool.poetry]
name = "parliamentary-minutes-chatbot"
version = "1.0.0"
description = "AI-powered chatbot for querying and analyzing Scottish Parliament meeting minutes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.2.0"
numpy = "^1.26.4"
tqdm = "^4.66.2"
scikit-learn = "^1.4.1"
scipy = "^1.12.0"
networkx = "^3.1"
python-louvain = "^0.16"
sentence-transformers = "^2.5.1"
torch = "^2.2.0"
requests = "^2.31.0"
spacy = "^3.7.2"
textblob = "^0.17.1"
qdrant-client = "^1.7.3"
fastapi = "^0.111.0"
uvicorn = "^0.27.1"
streamlit = "^1.32.2"
pydantic = "^2.6.4"
matplotlib = "^3.8.3"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 